--- a/Lectures/xaringan-themer.css
+++ b/Lectures/xaringan-themer.css
@@ -47,7 +47,7 @@
   --header-color: #000000;
   --background-color: #FFFFFF;
   --link-color: #18778C;
-  --text-bold-color: #D95829;
+  --text-bold-color: #4CA384;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FFFFFF;
   --inverse-background-color: #18778C;
