--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -44,10 +44,10 @@
 
   /* Colors */
   --text-color: #272822;
-  --header-color: #000000;
+  --header-color: #18778C;
   --background-color: #FFFFFF;
   --link-color: #18778C;
-  --text-bold-color: #D95829;
+  --text-bold-color: #4CA384;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FFFFFF;
   --inverse-background-color: #18778C;
@@ -55,7 +55,7 @@
   --inverse-link-color: #18778C;
   --title-slide-background-color: #18778C;
   --title-slide-text-color: #FFFFFF;
-  --header-background-color: #000000;
+  --header-background-color: #18778C;
   --header-background-text-color: #FFFFFF;
   --base: #18778C;
   --white: #FFFFFF;
